tests/NormalTests/paczka1/fuzzy1/65795247.err
Error in line 1: 7I5EP A82 99,9
Error in line 3: S779 A454 47,8
Error in line 11: QBD4wWesV1i A454 65,7
Error in line 9: 3qoH8 S779 31,3
Error in line 25: lmdO1d4 A82 230,4
Error in line 35: 3qoH8 S779 23,8
